@@ -65,3 +65,5 @@ Wed Sep  9 CST 2015
 
 Thu Sep 10 CST 2015
 - [+] Diary/09-10-2015
+- [+] include/asm/string.h			[D] Separate arch-specific string functions.
+- [M] include/sandix/string.h
